--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,27 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": "airbnb-base",
-    "overrides": [
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "rules": {
-      "no-restricted-syntax": [
-        "error",
-        "LabeledStatement",
-        "WithStatement"
-      ],
-      "import/no-extraneous-dependencies": [
-        "error", {
-          "devDependencies": true
-        }
-      ]
-    }
+  "env": {
+    "es6": true,
+    "browser": true,
+    "es2021": true
+  },
+  "extends": "airbnb-base",
+  "overrides": [
+  ],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "rules": {
+    "no-alert": "off",
+    "max-len": "off",
+    "no-new": "off",
+    "guard-for-in": "off",
+    "class-methods-use-this": "off",
+    "no-param-reassign": "off",
+    "no-restricted-syntax": [
+      "error",
+      "LabeledStatement",
+      "WithStatement"
+    ]
+  }
 }
